--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -118,127 +118,65 @@
                     <h3 class="mb20">About me </h3>
                     <p class="lead-rolla mb15">At ille non pertimuit saneque fidenter: Istis quidem ipsis verbis, inquit; Hos contra singulos dici est melius. Oculorum, inquit Plato, est in acerrimus.</p>
                     <p class="mb20">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intellegam quid sentiat; Itaque sensibus rationem adiunxit et ratione effecta sensus non.Taque sensibus rationem adiunxit et.</p>
-                    <div class="btn-group" role="group" aria-label="...">
-                        <button type="button" class="btn btn-default btn-lg scroll-link" data-id="work" href="#work">Portfolio</button>
-                        <button type="button" class="btn btn-primary btn-lg scroll-link" data-id="experience" href="#experience">Resume</button>
+
+                <div class ="row">
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="progress-bars-holder">
+                            <!-- Bar #1 -->
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                    <span class="sr-only">90% Complete</span>
+                                </div>
+                            </div><!-- /.bar -->
+                            <small class="text-light">Design</small>
+
+                            <!-- Bar #2 -->
+                            <div class="progress mt15">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">
+                                    <span class="sr-only">82% Complete</span>
+                                </div>
+                            </div><!-- /.bar -->
+                            <small class="text-light">Development</small>
+
+                            <!-- Bar #3 -->
+                            <div class="progress mt15">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                    <span class="sr-only">95% Complete</span>
+                                </div>
+                            </div><!-- /.bar -->
+                            <small class="text-light">Branding</small>
+
+                            <!-- Bar #4 -->
+                            <div class="progress mt15">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
+                                    <span class="sr-only">76% Complete</span>
+                                </div>
+                            </div><!-- /.bar -->
+                            <small class="text-light">Technology</small>
+                        </div><!-- /.progress bars holder -->
                     </div>
+
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <!-- Quote -->
+
+                            <h5 class="heading-1 mb20">Quote</h5>
+                            <p class="lead-sm text-light no-margin">“Live as if you were to die tomorrow. Learn as if you were to live forever.”</p>
+                            <div class="quote-author">- Mahatma Gandhi</div>
+                       <!-- /.column -->
+                    </div>
+
+                </div>
+
+
+                </div><!-- /.column -->
 
 					</div><!-- /.Information -->
 				</div><!-- /.column -->
 
-				<!-- Features -->
-				<div class="col-sm-4 col-md-1 col-lg-2 mt40-xs skill-holder rightReveal">
-					<h4 class="mt15 mb15 spaced">
-						<span class="icon-holder ion-ios-monitor"></span>
-						<span class="hidden-md">Web</span>
-					</h4>
-					<h4 class="mb15 spaced">
-						<span class="icon-holder ion-iphone"></span>
-						<span class="hidden-md">App</span>
-					</h4>
-					<h4 class="mb15 spaced">
-						<span class="icon-holder ion-playstation"></span>
-						<span class="hidden-md">Ico</span>
-					</h4>
-					<h4 class="no-margin-bottom spaced">
-						<span class="icon-holder ion-gear-a"></span>
-						<span class="hidden-md">Dev</span>
-					</h4>
-				</div><!-- /.column -->
 			</div><!-- /.row -->
 
-			<!-- Row 2 - Progress Bars / Quote -->
-			<div class="row mb40">
-				<!-- Skills -->
-				<div class="col-md-3 leftReveal">
-					<h5 class="heading-1 mb20">Skills</h5>
-					<p><em>At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intelli egam quid sentiat; Itaque sensibus rationem adiunxit et rati one effecta sensus non grinder single.</em></p>
-					<p class="no-margin">Taque sensibus rationem adiunxit et ratione effecta sensus non reliquit. Con panna organic americano.</p>
-				</div><!-- /.column -->
 
-				<!-- Progress Bars -->
-				<div class="col-md-5 topReveal">
-					<div class="progress-bars-holder">
-						<!-- Bar #1 -->
-						<div class="progress">
-							<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-								<span class="sr-only">90% Complete</span>
-							</div>
-						</div><!-- /.bar -->
-						<small class="text-light">Design</small>
 
-						<!-- Bar #2 -->
-						<div class="progress mt15">
-							<div class="progress-bar" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">
-								<span class="sr-only">82% Complete</span>
-							</div>
-						</div><!-- /.bar -->
-						<small class="text-light">Development</small>
-
-						<!-- Bar #3 -->
-						<div class="progress mt15">
-							<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-								<span class="sr-only">95% Complete</span>
-							</div>
-						</div><!-- /.bar -->
-						<small class="text-light">Branding</small>
-
-						<!-- Bar #4 -->
-						<div class="progress mt15">
-							<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-								<span class="sr-only">76% Complete</span>
-							</div>
-						</div><!-- /.bar -->
-						<small class="text-light">Technology</small>
-					</div><!-- /.progress bars holder -->
-				</div><!-- /.column -->
-
-				<!-- Quote -->
-				<div class="col-md-4 mt30-xs mt30-sm rightReveal">
-					<h5 class="heading-1 mb20">Quote</h5>
-					<p class="lead-sm text-light no-margin">“Live as if you were to die tomorrow. Learn as if you were to live forever.”</p>
-					<div class="quote-author">- Mahatma Gandhi</div>
-				</div><!-- /.column -->
-			</div><!-- /.row -->
-
-			<!-- Row 3 - Process -->
-			<div class="row">
-				<!-- Step 1 -->
-				<div class="col-md-3 bottomReveal">
-					<h4 class="spaced no-margin-top mb15">
-						<span class="icon-holder">1</span>
-						Idea
-					</h4>
-					<p class="no-margin-bottom">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intel legam quid sentiat; Itaque sensibus rationem adiunxit et ratione.</p>
-				</div><!-- /.column -->
-
-				<!-- Step 2 -->
-				<div class="col-md-3 mt30-xs mt30-sm bottomReveal">
-					<h4 class="spaced no-margin-top mb15">
-						<span class="icon-holder">2</span>
-						Plan
-					</h4>
-					<p class="no-margin-bottom">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intel legam quid sentiat; Itaque sensibus rationem adiunxit et ratione.</p>
-				</div><!-- /.column -->
-
-				<!-- Step 3 -->
-				<div class="col-md-3 mt30-xs mt30-sm bottomReveal">
-					<h4 class="spaced no-margin-top mb15">
-						<span class="icon-holder">3</span>
-						Design
-					</h4>
-					<p class="no-margin-bottom">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intel legam quid sentiat; Itaque sensibus rationem adiunxit et ratione.</p>
-				</div><!-- /.column -->
-
-				<!-- Step 4 -->
-				<div class="col-md-3 mt30-xs mt30-sm bottomReveal">
-					<h4 class="spaced no-margin-top mb15">
-						<span class="icon-holder">4</span>
-						Execute
-					</h4>
-					<p class="no-margin-bottom">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intel legam quid sentiat; Itaque sensibus rationem adiunxit et ratione.</p>
-				</div><!-- /.column -->
-			</div><!-- /.row -->
 
 		</div><!-- /.container -->
 	</section>
