about Text added

--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -98,7 +98,7 @@
 			<!-- Title -->
 			<div class="row mb60">
 				<div class="col-xs-12 text-center">
-					<h2>About</h2>
+					<h2></h2>
 					<span class="divider divider-center divider-dark no-margin-bottom"></span>
 				</div><!-- /.column -->
 			</div><!-- /.row -->
@@ -115,9 +115,12 @@
 
 				<!-- Information -->
 				<div class="col-sm-8 col-md-9 col-lg-9 mt40-xs mt40-sm topReveal">
-                    <h3 class="mb20">About me </h3>
-                    <p class="lead-rolla mb15">At ille non pertimuit saneque fidenter: Istis quidem ipsis verbis, inquit; Hos contra singulos dici est melius. Oculorum, inquit Plato, est in acerrimus.</p>
-                    <p class="mb20">At multis se probavit. Si alia sentit, inquam, alia loquitur, numquam intellegam quid sentiat; Itaque sensibus rationem adiunxit et ratione effecta sensus non.Taque sensibus rationem adiunxit et.</p>
+                    <h3 class="mb20">Hello World - I’m Natascha!</h3>
+                    <p class="mb20">Since I was a small child I loved painting and maths. Over the time this changed into a fascination for the fast pacing technology which is drastically changing our society - and art with it’s very reflective nature. <br>
+
+                        I have studied <b>"Art and Multimedia"</b>, an interdisciplinary study on media art and IT, afterwards I choose to take a deeper look into<b> IT studies</b>. <br>Since that time I worked in different fields where I have strengthen my skills and expertise.
+                        I worked as a <b>Video Editor, Graphic Designer with focus on UI, freelance Media-Artist and Software Developer</b>. Never being afraid to use different tools from different domains and follow unexpected ways to realize the best outcome for the projects, I always remained curious to learn more.</p>
+                    <p class="mb20">Whenever possible I take time for travel. Whenever I travel I take my camera with me. It’s the interaction with people from different cultures, and the understanding that we are all unique - but same in our essence, that thrives my wish to explore further and to capture the never-ending beauty that surrounds as all (... not to forget a small tiny little need for adventure once in a while ;).</p>
 
                 <div class ="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
