--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -124,38 +124,39 @@
 
                 <div class ="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
+                        <h5 class="heading-1 mb20">Skills</h5>
                         <div class="progress-bars-holder">
                             <!-- Bar #1 -->
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                                     <span class="sr-only">90% Complete</span>
                                 </div>
                             </div><!-- /.bar -->
-                            <small class="text-light">Design</small>
+                            <small class="text-light">Java</small>
 
                             <!-- Bar #2 -->
                             <div class="progress mt15">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                                     <span class="sr-only">82% Complete</span>
                                 </div>
                             </div><!-- /.bar -->
-                            <small class="text-light">Development</small>
+                            <small class="text-light">HTML/CSS/Javascript</small>
 
                             <!-- Bar #3 -->
                             <div class="progress mt15">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                     <span class="sr-only">95% Complete</span>
                                 </div>
                             </div><!-- /.bar -->
-                            <small class="text-light">Branding</small>
+                            <small class="text-light">Photoshop</small>
 
                             <!-- Bar #4 -->
                             <div class="progress mt15">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-                                    <span class="sr-only">76% Complete</span>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                    <span class="sr-only">60% Complete</span>
                                 </div>
                             </div><!-- /.bar -->
-                            <small class="text-light">Technology</small>
+                            <small class="text-light">Premiere Pro</small>
                         </div><!-- /.progress bars holder -->
                     </div>
 
@@ -192,16 +193,17 @@
 			<!-- Title -->
 			<div class="row mb50">
 				<div class="col-sm-12 col-md-6 col-md-offset-3 text-center filter-button-group">
-					<h2>Work</h2>
+					<h2>Photography</h2>
 					<span class="divider divider-center divider-dark mb30"></span>
 					<span>Filter :</span>
 					<ul class="list-work-filter list-unstyled list-inline">
 						<li class="active" data-filter="*">All</li>
-						<li data-filter=".web">Photography</li>
-						<li data-filter=".print">Painting</li>
-						<li data-filter=".product">Video</li>
-                        <li data-filter=".video">Interactive</li>
-
+						<li data-filter=".asia">Asia</li>
+						<li data-filter=".north-america">North America</li>
+						<li data-filter=".central-america">Central America</li>
+                        <li data-filter=".humans">Humans</li>
+                        <li data-filter=".nature">Nature</li>
+                        <li data-filter=".bw">B/W</li>
 					</ul>
 				</div><!-- /.column -->
 			</div><!-- /.row -->
