--- a/HTML/onepage-top-default.html
+++ b/HTML/onepage-top-default.html
@@ -8,13 +8,13 @@
 	<title>Rolla | Minimal Portfolio Template</title>
 
 	<!-- Royal Preloader CSS -->
-	<link href="css/royal_preloader.css" rel="stylesheet">
+	<link href="css/lib/royal_preloader.css" rel="stylesheet">
 
 	<!-- jQuery Files -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 	<!-- Royal Preloader -->
-	<script type="text/javascript" src="js/royal_preloader.min.js"></script>
+	<script type="text/javascript" src="js/lib/royal_preloader.min.js"></script>
 	<script type="text/javascript">
 		Royal_Preloader.config({
 		    mode:           'number',
@@ -24,10 +24,10 @@
 	</script>
 
 	<!-- Stylesheets -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/ionicons.min.css" rel="stylesheet">
-	<link href="css/pe-icon-7-stroke.css" rel="stylesheet">
-	<link href="css/magnific-popup.css" rel="stylesheet">
+	<link href="css/lib/bootstrap.min.css" rel="stylesheet">
+	<link href="css/lib/ionicons.min.css" rel="stylesheet">
+	<link href="css/lib/pe-icon-7-stroke.css" rel="stylesheet">
+	<link href="css/lib/magnific-popup.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" title="main-css">
 </head>
 <body class="body-spacing-top royal_preloader">
@@ -920,7 +920,7 @@
 	<!-- End Footer -->
 
 	<!-- Javascript Files -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArLNT3t4qsJEBmR0R9P_6ueLIQz0Jvt1M&callback=initMap" async defer></script>
     <script type="text/javascript">
 		/* ---- Google Maps ---- */
@@ -943,10 +943,10 @@
             });
         }
     </script>
-	<script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
-	<script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-	<script type="text/javascript" src="js/form-validator.min.js"></script>
-	<script type="text/javascript" src="js/scrollreveal.min.js"></script>
+	<script type="text/javascript" src="js/lib/isotope.pkgd.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery.magnific-popup.min.js"></script>
+	<script type="text/javascript" src="js/lib/form-validator.min.js"></script>
+	<script type="text/javascript" src="js/lib/scrollreveal.min.js"></script>
 	<script type="text/javascript">
 		/* ---- Portfolio Isotope ---- */
 		$(document).ready(function(){
