pics in photographie section added, links to pics added

--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -59,8 +59,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
                         <li><a href="#about" data-id="about" class="scroll-link">About</a></li>
-						<li><a href="#photography" data-id="photography" class="scroll-link">Photography</a></li>
                         <li><a href="#mixed-media" data-id="mixed-media" class="scroll-link">Multimedia</a></li>
+                        <li><a href="#photography" data-id="photography" class="scroll-link">Photography</a></li>
                         <li><a href="#services" data-id="services" class="scroll-link">Services</a></li>
                         <li><a href="#cv" data-id="cv" class="scroll-link">CV</a></li>
                         <li><a href="#map" data-id="map" class="scroll-link">Contact</a></li>
@@ -189,51 +189,7 @@
 	</section>
 	<!-- End About -->
 
-    <!-- Begin photography -->
-    <section id="photography" class="section-padding-work section-border-bottom">
-		<div class="container">
-			<!-- Title -->
-			<div class="row mb50">
-				<div class="col-sm-12 col-md-6 col-md-offset-3 text-center filter-button-group">
-					<h2>Photography</h2>
-					<span class="divider divider-center divider-dark mb30"></span>
-					<span>Filter :</span>
-					<ul class="list-work-filter list-unstyled list-inline">
-						<li class="active" data-filter="*">All</li>
-						<li data-filter=".asia">Asia</li>
-						<li data-filter=".north-america">North America</li>
-						<li data-filter=".central-america">Central America</li>
-                        <li data-filter=".humans">Humans</li>
-                        <li data-filter=".nature">Nature</li>
-                        <li data-filter=".bw">B/W</li>
-					</ul>
-				</div><!-- /.column -->
-			</div><!-- /.row -->
 
-			<!-- Masonry Portfolio -->
-			<div class="row grid">
-                <div class="template-item" data-template="galleryItem" data-image="work/1.jpg"
-                     data-heading="Right Sand" data-description="Product"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/2.jpg"
-                     data-heading="Polly Fox" data-description="Print"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/3.jpg"
-                     data-heading="Roots" data-description="Print"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/4.jpg"
-                     data-heading="Magazine" data-description="Print"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/5.jpg"
-                     data-heading="Bottle" data-description="Product"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/6.jpg"
-                     data-heading="Triangle" data-description="Web"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/7.jpg"
-                     data-heading="Hermes" data-description="Web"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/8.jpg"
-                     data-heading="Reasons" data-description="Web"></div>
-                <div class="template-item" data-template="galleryItem" data-image="work/9.jpg"
-                     data-heading="Cards" data-description="Print"></div>
-			</div><!-- /.row -->
-		</div><!-- /.container -->
-	</section>
-	<!-- End photography -->
 
     <!-- Begin Mixed Media -->
     <section id="mixed-media" class="section-padding-work section-border-bottom">
@@ -395,6 +351,183 @@
         </div><!-- /.container -->
     </section>
     <!-- End Mixed Media -->
+
+
+    <!-- Begin photography -->
+    <section id="photography" class="section-padding-work section-border-bottom">
+        <div class="container">
+            <!-- Title -->
+            <div class="row mb50">
+                <div class="col-sm-12 col-md-6 col-md-offset-3 text-center filter-button-group">
+                    <h2>Photography</h2>
+                    <span class="divider divider-center divider-dark mb30"></span>
+                    <span>Filter :</span>
+                    <ul class="list-work-filter list-unstyled list-inline">
+                        <li class="active" data-filter="*">All</li>
+                        <li data-filter=".asia">Asia</li>
+                        <li data-filter=".north-america">North America</li>
+                        <li data-filter=".central-america">Central America</li>
+                        <li data-filter=".humans">Humans</li>
+                        <li data-filter=".nature">Nature</li>
+                        <li data-filter=".bw">B/W</li>
+                    </ul>
+                </div><!-- /.column -->
+            </div><!-- /.row -->
+
+            <!-- Masonry Portfolio -->
+            <div class="row grid">
+                <div class="template-item" data-template="galleryItem" data-image="work/1.jpg"
+                     data-classes = "asia humans bw" data-heading="Sulawesi" data-description="asia">Asia</div>
+                <div class="template-item" data-template="galleryItem" data-image="work/2.jpg"
+                     data-classes = "asia humans"data-heading="Polly Fox" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/3.jpg"
+                     data-classes = "asia humans" data-heading="Roots" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/4.jpg"
+                     data-classes = "asia humans" data-heading="Magazine" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/5.jpg"
+                     data-classes = "asia humans" data-heading="Bottle" data-description="Product"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/7.jpg"
+                     data-classes = "north-america nature" data-heading="Hermes" data-description="Web"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/8.jpg"
+                     data-classes = "north-america nature bw" data-heading="Reasons" data-description="Web"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/9.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/10.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/12.jpg"
+                     data-classes = "north-america nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/13.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/14.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/15.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/16.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/17.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/18.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/19.jpg"
+                     data-classes = "central-america nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/20.jpg"
+                     data-classes = "central-america humans bw"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/21.jpg"
+                     data-classes = "asia humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/23.jpg"
+                     data-classes = "asia nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/24.jpg"
+                     data-classes = "asia nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/25.jpg"
+                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/26.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/27.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/28.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/29.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/30.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/31.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/32.jpg"
+                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/33.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/36.jpg"
+                     data-classes = "central-america humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/37.jpg"
+                     data-classes = "central-america humans"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/38.jpg"
+                     data-classes = "central-america nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/39.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/40.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/41.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/42.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/43.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/44.jpg"
+                     data-classes = "nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/45.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/47.jpg"
+                     data-classes = "central-america humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/48.jpg"
+                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/49.jpg"
+                     data-classes = "asia nature bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/50.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/51.jpg"
+                     data-classes = "asia nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/52.jpg"
+                     data-classes = "asia humans bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/53.jpg"
+                     data-classes = "asia bw" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/54.jpg"
+                     data-classes = "asia humans"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/56.jpg"
+                     data-classes = "asia bw"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/57.jpg"
+                     data-classes = "asia nature"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/58.jpg"
+                     data-classes = "asia"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/59.jpg"
+                     data-classes = "asia humans"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/60.jpg"
+                     data-classes = "asia"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/61.jpg"
+                     data-classes = "asia"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/62.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/63.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/64.jpg"
+                     data-classes = "asia" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/65.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/66.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/67.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/82.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/68.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/70.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/71.jpg"
+                     data-classes = "central-america nature" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/72.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/73.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/74.jpg"
+                     data-classes = "central america nature bw"data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/75.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/79.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/80.jpg"
+                     data-classes = "asia" data-heading="Cards" data-description="Print"></div>
+                <div class="template-item" data-template="galleryItem" data-image="work/84.jpg"
+                     data-classes = "asia humans" data-heading="Cards" data-description="Print"></div>
+
+
+
+
+
+
+            </div><!-- /.row -->
+        </div><!-- /.container -->
+    </section>
+    <!-- End photography -->
 
 
     <!-- Begin Video CTA -->
