--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -377,41 +377,41 @@
             <!-- Masonry Portfolio -->
             <div class="row grid">
                 <div class="template-item" data-template="galleryItem" data-image="work/1.jpg"
-                     data-classes = "asia humans bw" data-heading="Sulawesi" data-description="asia">Asia</div>
+                     data-classes = "asia humans bw" data-heading="Sulawesi" data-description="Indonesia"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/2.jpg"
-                     data-classes = "asia humans"data-heading="Polly Fox" data-description="Print"></div>
+                     data-classes = "asia humans" data-heading="Bali" data-description="Indonesia"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/3.jpg"
-                     data-classes = "asia humans" data-heading="Roots" data-description="Print"></div>
+                     data-classes = "asia humans" data-heading="Night train to Bankog" data-description="Thailand"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/4.jpg"
-                     data-classes = "asia humans" data-heading="Magazine" data-description="Print"></div>
+                     data-classes = "asia humans" data-heading="Mountain village" data-description="Laos"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/5.jpg"
-                     data-classes = "asia humans" data-heading="Bottle" data-description="Product"></div>
+                     data-classes = "asia humans" data-heading="Mountain village" data-description="Laos"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/7.jpg"
-                     data-classes = "north-america nature" data-heading="Hermes" data-description="Web"></div>
+                     data-classes = "north-america nature" data-heading="Wild lake" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/8.jpg"
-                     data-classes = "north-america nature bw" data-heading="Reasons" data-description="Web"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canda"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/9.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/10.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/12.jpg"
-                     data-classes = "north-america nature" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/13.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/14.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/15.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/16.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/17.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="banff national park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/18.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/19.jpg"
-                     data-classes = "central-america nature" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america nature" data-heading="Playa Manuel Antonio" data-description="Costa Rica"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/20.jpg"
-                     data-classes = "central-america humans bw"data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw"data-heading="San Jose" data-description="Costa Rica"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/21.jpg"
                      data-classes = "asia humans bw" data-heading="Cards" data-description="Print"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/23.jpg"
@@ -419,7 +419,7 @@
                 <div class="template-item" data-template="galleryItem" data-image="work/24.jpg"
                      data-classes = "asia nature bw" data-heading="Cards" data-description="Print"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/25.jpg"
-                     data-classes = "north-america nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "north-america nature bw" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/26.jpg"
                      data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/27.jpg"
