--- a/HTML/onepage-top-parallax-image.html
+++ b/HTML/onepage-top-parallax-image.html
@@ -413,45 +413,45 @@
                 <div class="template-item" data-template="galleryItem" data-image="work/20.jpg"
                      data-classes = "central-america humans bw"data-heading="San Jose" data-description="Costa Rica"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/21.jpg"
-                     data-classes = "asia humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "asia humans bw" data-heading="Mountain village" data-description="Indonesia"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/23.jpg"
-                     data-classes = "asia nature" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "asia nature" data-heading="mae hong son" data-description="Thailand"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/24.jpg"
-                     data-classes = "asia nature bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "asia nature bw" data-heading="mae hong son" data-description="Thailand"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/25.jpg"
                      data-classes = "north-america nature bw" data-heading="Willmore Wilderness Park" data-description="Canada"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/26.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Granada" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/27.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Granada" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/28.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Granada" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/29.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Ometepe" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/30.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Mangua" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/31.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Madagalpa" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/32.jpg"
-                     data-classes = "central-america humans bw" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans bw" data-heading="Madagalpa" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/33.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/36.jpg"
-                     data-classes = "central-america humans" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/37.jpg"
-                     data-classes = "central-america humans"data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america humans"data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/38.jpg"
-                     data-classes = "central-america nature" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america nature" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/39.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/40.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/41.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/42.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/43.jpg"
-                     data-classes = "central-america" data-heading="Cards" data-description="Print"></div>
+                     data-classes = "central-america" data-heading="Cards" data-description="Nicaragua"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/44.jpg"
                      data-classes = "nature" data-heading="Cards" data-description="Print"></div>
                 <div class="template-item" data-template="galleryItem" data-image="work/45.jpg"
